--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@feathersjs/client": "^3.7.8",
     "axios": "^0.19.0",
     "google-map-react": "^1.1.4",
     "jwt-decode": "^2.2.0",
@@ -26,6 +27,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "recompose": "^0.30.0",
+    "socket.io-client": "^2.2.0",
     "store": "^2.0.12",
     "styled-components": "^4.2.0",
     "styled-flex-component": "^3.0.0",
