Extract api url to config file .env

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "insurance-web",
-  "name": "Insurance web",
+  "short_name": "cossacks-web",
+  "name": "Cossacks web",
   "icons": [
     {
       "src": "favicon.ico",
